--- a/style.css
+++ b/style.css
@@ -1,7 +1,49 @@
-.header {
-    padding: 80px;
-    margin: 0;
-text-align: center;
+
+.topnav{
+    position: relative;
+    background-color:antiquewhite;
+    overflow: hidden;
+}
+strong, em {
+    font-weight: bold;
+}
+.topnav a {
+    float: left;
+    color: red;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:hover{
     background-color: aqua;
     color: black;
+
 }
+.topnav a.active{
+    background-color: #4995ac;
+    color: white;
+}
+.topnav-centered a {
+    float: none;
+    position:absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.topnav-right{
+    float: right;
+}
+@media screen and (min-width: 200px) {
+    .topnav a, .topnav-right {
+      float: none;
+      display: block;
+    }
+  
+    .topnav-centered a {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: none;
+    }
+  }
