--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
 }
 
 .header {
     min-height: 100vh;
     width: 100%;
-    background-color: rgba(173, 200, 213, 0.556);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7) rgba(4, 9, 30, 0.7)), url(images/p.5.jpeg);
     background-position: center;
     background-size: cover;
     position: relative;
+}
+
+a .logo {
+    position: absolute;
 }
 nav {
     display: flex;
@@ -31,14 +34,184 @@ nav img {
     padding: 8px 12px;
     position: relative;
 }
-.logo {
-    border-radius: 38%;
-    border: 2px solid rgb(221, 221, 221);
-    padding: 5px;
-    width: 135px;
-}
+
 .nav-links ul li a {
     color: black;
     text-decoration: none;
     font-size: 13px;
+}
+.nav-links ul li ::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.text-box {
+    width: 90%;
+    position: absolute;
+    color: #003;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+text-box h1 {
+    font-size: 62px;
+}
+.text-box p {
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: #003;
+    font: 1em sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+}
+.hero-btn {
+    text-decoration: none;
+    display: inline-block;
+    color: rgb(69, 130, 141);
+    border: 1px solid rgb(47, 89, 128);
+    padding: 12px 34px;
+    background-color: transparent;
+    position: relative;
+    cursor: pointer;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.hero-btn:hover {
+    border: 1px solid #f44336;
+    background: rgb(155, 167, 124);
+    transition: 1sc;
+}
+nav .fa {
+    display: none;
+}
+
+@media (max-width: 700px) {
+    .text-box h1 {
+        font-size: 20px;
+    }
+    .nav-links ul li {
+        display: block;
+    }
+    .nav-links {
+        position: absolute;
+        background: #5c96b8;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .fa {
+        display: block;
+        color: rgb(69, 124, 145);
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    nav nav-links ul {
+        padding: 30px;
+    }
+}
+/*----- Course----*/
+.course {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1 {
+    font-size: 36px;
+    font-weight: 600px;
+}
+p {
+    color: black;
+    font-size: 14px;
+    font-weight: 300px;
+    line-height: 22px;
+    padding: 10px;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: row wrap;
+    flex: 1 100%;
+    width: 92.5%;
+    align-self: center;
+    padding-top: 3.5em;
+    padding-bottom: 2.5em;
+    margin: 0;
+}
+.course-col {
+    flex-basis: 31%;
+    background: rgb(163, 156, 100);
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+h3 {
+    text-align: center;
+    font-weight: 600px;
+    margin: 10px 0;
+}
+.course-col:hover {
+    box-shadow: 0 0 20px 0px rgba(126, 73, 135, 0.9);
+}
+@media (max-width: 700px) {
+    .row {
+        flex-direction: column;
+    }
+}
+.testimonials {
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+.testimonial-col {
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+.testimonial-col img {
+    height: 30px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+    flex-basis: 31%;
+    background: rgb(163, 156, 100);
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    box-shadow: 0 0 20px 0px rgba(126, 73, 135, 0.9);
+}
+.testimonial-col p {
+    padding: 0;
+}
+.testimonial-col h3 {
+    margin-top: 15px;
+    text-align: left;
+}
+.testimonial-col h3 .fa {
+    color: #36a8f4;
+}
+@media (max-width: 700px) {
+    .testimonial-col img {
+        flex-direction: column;
+    }
 }
